# rpg-xp-voting

./: .dockerignore  .gitignore  .vercelignore  README.md  docker-compose.yml  render.yaml  requirements.txt  vercel.json
api/: index.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606160001_initial_schema.py  202606160002_groups_and_participants.py  202606160003_points_pool_multiple_of_5.py  202606160004_user_profile_color.py  202606160005_user_theme_and_avatar.py  202606160006_avatar_text_storage.py  202606160007_user_theme_paper.py  202606160008_vote_gm_note.py  202606160009_published_results.py  202606160010_archive_published_results.py  202606160011_group_image.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  groups.py  maintenance.py  me.py  players.py  results.py  statistics.py  votes.py  voting_sessions.py
backend/app/auth/: jwt.py
backend/app/core/: config.py  errors.py
backend/app/models/: __init__.py  group.py  user.py  vote.py  voting_session.py
backend/app/repositories/: groups.py  sessions.py  users.py  votes.py
backend/app/schemas/: auth.py  common.py  group.py  maintenance.py  me.py  results.py  statistics.py  user.py  vote.py  voting_session.py
backend/app/services/: auth.py  groups.py  maintenance.py  results.py  sessions.py  statistics.py  users.py  votes.py
backend/scripts/: seed_admin.py
backend/tests/: test_vote_validation.py
frontend/: Dockerfile  (+7 more)
(+43 files in other folders)
