[project]
name = "rpg-xp-voting-backend"
version = "1.0.0"
description = "FastAPI backend for RPG XP Voting"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.13.2",
  "bcrypt==4.0.1",
  "email-validator==2.2.0",
  "fastapi==0.111.0",
  "openpyxl==3.1.5",
  "passlib[bcrypt]==1.7.4",
  "psycopg[binary]==3.2.1",
  "pydantic-settings==2.3.4",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.9",
  "sqlalchemy==2.0.31",
  "uvicorn[standard]==0.30.1"
]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "httpx==0.27.0",
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "ruff==0.5.0"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
